--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "bulma-toast": "^2.4.1",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
+    "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.3.2",
+    "install": "^0.13.0",
     "mini-css-extract-plugin": "^2.4.2",
     "node-sass": "^6.0.1",
+    "npm": "^8.1.2",
     "remove-files-webpack-plugin": "^1.4.5",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
@@ -34,5 +37,6 @@
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
-  }
+  },
+  "dependencies": {}
 }
